<resources>
    <string name="app_name">GlobusSoft_Assignment</string>
    <string name="record_feedback">Record Feedback</string>
    <string name="feedback">Feedback</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="few_lines_about_your_experience">Few Lines about your experience</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="home_info_text">please click on menu icon [Top | Right] \n to submit the feedback</string>
    <string name="globussoft_assignment">GlobusSoft Assignment</string>
</resources>