<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tv_header"
            style="@style/text_style_21sp_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_top" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="29dp" />

        <include
            android:id="@+id/layout_ratings"
            layout="@layout/layout_ratings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_header" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:background="@color/white"
            android:hint="@string/please_enter_your_name"
            app:layout_constraintTop_toBottomOf="@id/layout_ratings">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_name"
                style="@style/ratings_text_input_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:hint="@string/please_enter_your_email"
            app:layout_constraintTop_toBottomOf="@id/tl_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_email"
                style="@style/ratings_text_input_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:hint="@string/few_lines_about_your_experience"
            app:layout_constraintTop_toBottomOf="@id/tl_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_description"
                style="@style/ratings_text_input_text_style"
                android:layout_width="match_parent"
                android:layout_height="180dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/submit_feedback"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_description" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>